<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        android:actionLayout="@layout/include_search_view"
        android:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_main_login"
        android:title="@string/auth"
        android:actionLayout="@layout/include_search_view"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menu_main_logout"
        android:title="@string/deauth"
        android:actionLayout="@layout/include_search_view"
        android:showAsAction="never"/>
</menu>